Add base logic, celery worker and docker configuration

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,21 @@ DB_PORT=5432
 DB_NAME=speech_db
 DB_USER=user
 DB_PASSWORD=password
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+DEVICE=cpu
+COMPUTE_TYPE=float16
+DOWNLOAD_ROOT=models
+BATCH_SIZE=4
+CHUNK_SIZE=10
+
+# Optimal settings for CUDA
+#DEVICE=gpu
+#COMPUTE_TYPE=int8
+#DOWNLOAD_ROOT=models
+#BATCH_SIZE=8
+#CHUNK_SIZE=20
+
+HF_TOKEN=your_huggingface_token
