Fixed python version and update docker config

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 LOG_LEVEL=DEBUG
 
-DB_HOST=postgres
+DB_HOST=speech-postgres
 DB_PORT=5432
 DB_NAME=speech_db
 DB_USER=user
 DB_PASSWORD=password
 
-REDIS_HOST=redis
+REDIS_HOST=speech-redis
 REDIS_PORT=6379
 
 DEVICE=cpu
