--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
         condition: service_completed_successfully
       speech-redis:
         condition: service_started
-    restart: unless-stopped
+    # restart: unless-stopped
 
   speech-celery-worker:
     build:
@@ -96,7 +96,7 @@ services:
         condition: service_started
       migrate:
         condition: service_completed_successfully
-    restart: unless-stopped
+    # restart: unless-stopped
     # deploy:
     #   resources:
     #     reservations:
