Update device mistake

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ BATCH_SIZE=4
 CHUNK_SIZE=10
 
 # Optimal settings for CUDA
-#DEVICE=gpu
+#DEVICE=cuda
 #COMPUTE_TYPE=int8
 #DOWNLOAD_ROOT=models
 #BATCH_SIZE=8
