--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   speech-postgres:
-    image: postgres:16
+    image: postgres:16-alpine
     container_name: speech-postgres
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -13,7 +13,7 @@ services:
     volumes:
       - speech-postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}" ]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -29,7 +29,7 @@ services:
     volumes:
       - speech-redis-data:/data
     healthcheck:
-      test: ["CMD-SHELL", "redis-cli ping || exit 1"]
+      test: [ "CMD-SHELL", "redis-cli ping || exit 1" ]
       interval: 5s
       timeout: 3s
       retries: 10
@@ -43,7 +43,7 @@ services:
     container_name: speech-migrate
     env_file:
       - .env
-    command: ["uv", "run", "alembic", "upgrade", "head"]
+    command: [ "uv", "run", "alembic", "upgrade", "head" ]
     networks:
       - speech-network
     depends_on:
