--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "speech-api"
 version = "0.0.1"
-description = "Add your description here"
+description = "Speech API is a fast and fault-tolerant service for working with STT"
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
@@ -11,7 +11,7 @@ dependencies = [
     "redis>=6.4.0",
     "advanced-alchemy>=1.6.3",
     "asyncpg>=0.30.0",
-    "ruff>=0.14.0",
+    "celery-types>=0.23.0",
 ]
 
 [project.optional-dependencies]
