--- a/docker/Dockerfile.worker.cuda
+++ b/docker/Dockerfile.worker.cuda
@@ -1,19 +1,23 @@
 FROM nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends curl ca-certificates ffmpeg && \
+    apt-get install -y --no-install-recommends \
+        curl ca-certificates ffmpeg \
+        libcudnn9=9.1.0.70-1+cuda12.4 \
+        libcudnn9-dev=9.1.0.70-1+cuda12.4 && \
     rm -rf /var/lib/apt/lists/*
+
+ENV LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:/usr/local/cuda/lib64:$LD_LIBRARY_PATH
+ENV PIP_EXTRA_INDEX_URL="https://download.pytorch.org/whl/cu124"
 
 WORKDIR /app
 
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 ENV PATH="/root/.local/bin:${PATH}"
 
-ENV PIP_EXTRA_INDEX_URL="https://download.pytorch.org/whl/cu124"
-
 COPY pyproject.toml uv.lock ./
 RUN uv sync --frozen --no-dev --extra worker
 
 COPY . .
 
-CMD ["uv", "run", "celery", "-A", "src.workers.app:celery_app", "worker", "-l", "INFO", "--concurrency=1"]
+CMD ["uv", "run", "celery", "-A", "src.workers.app:celery_app", "worker", "-l", "INFO", "--concurrency=1", "--pool=solo"]
