--- a/docker/Dockerfile.worker.cuda
+++ b/docker/Dockerfile.worker.cuda
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:12.6.2-cudnn-devel-ubuntu22.04
+FROM nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends curl ca-certificates ffmpeg && \
@@ -9,19 +9,11 @@ WORKDIR /app
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 ENV PATH="/root/.local/bin:${PATH}"
 
-ENV PIP_EXTRA_INDEX_URL="https://download.pytorch.org/whl/cu126"
+ENV PIP_EXTRA_INDEX_URL="https://download.pytorch.org/whl/cu124"
 
 COPY pyproject.toml uv.lock ./
 RUN uv sync --frozen --no-dev --extra worker
 
 COPY . .
-
-ENV CUDA_HOME=/usr/local/cuda
-ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:$LD_LIBRARY_PATH
-ENV PATH=/usr/local/cuda/bin:$PATH
-
-ENV PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:512
-
-ENV CUDNN_VERSION=9
 
 CMD ["uv", "run", "celery", "-A", "src.workers.app:celery_app", "worker", "-l", "INFO", "--concurrency=1", "--pool=solo"]
